--- a/ex33/estilo/estilo.css
+++ b/ex33/estilo/estilo.css
@@ -1,74 +1,105 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 :root{
     --font01:Verdana, Geneva, Tahoma, sans-serif;
-    --font02: 'Passion One';
-    --font03: 'Sriracha';
+    --font02: 'Passion One', cursive;
+    --font03: 'Sriracha',cursive;
 }
 *{
-    border:0px;
     padding: 0px;
     margin:0px;
+    font-size: 1em;
 
 
 }
-body{
+html,body{
+    font-family:var(--font01);
     min-height: 100vh;
-    background-color: white;
+    background-color: darkgray;
  
 }
 header{
-    
+    margin: auto;
     background-color: black;
     color:white; 
     text-align: center;
 
 }
 header> h1{
-    font-size: 136px;
+    font-size: 10vw;
     padding-top: 50px;
-    padding-bottom: 50px;
     font-family: var(--font02);
     font-variant: small-caps;
-    font-weight: bold;
+    font-size:  10vw;
     
 }
 header > p{
     position: relative;
-    top:-50px;
+    padding-bottom: 50px;
     text-align: center;
     color:white;
-    font-family:var(--font01)
-  
+    padding-bottom: 50px;
+    
 }
-header >p > a{
+ a{
     color:white;
     text-decoration: none;
-    font-family: var(--font01);
     font-weight: bold;
 }
-.normal >p{
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
     font-family: var(--font03);
-    font-size: 46px;
+    font-size: 3.5vw;
+    
 }
-.image>p{
-    font-family: var(--font03);
-    font-size: 47px;
+a:hover{
+    text-decoration: underline;
+}
 
     
-    
+
+section.image{
+    background-color: rgb(51,51,51 );
+    color:white;
+   
+
 }
+section.image>p{
+    display: inline-block;
+    padding: 5vw;
+    background-color: rgba(0, 0, 0, 0.253);
+}
+section#img01{
+    background-attachment: fixed;
+    background-image: url(/ex33/imagem/background001.jpg);
+    background-position: right,bottom;
+
+}
+section#img02{
+    background-attachment: fixed;
+    background-image: url(/ex33/imagem/background002.jpg);
+    background-position: right,bottom;  
+}
+section.normal{
+    background-color: white;
+    color:black;
+}
+
+
 footer{
     background-color: black;
     color:white;
     text-align: center;
-    padding:15px;
+    padding:10px;
     
     
 }
 footer>p{
-    font-family:var(--font01);
+    
     font-weight: bold;
 }
 footer> p >a{
