--- a/ex33/estilo/estilo.css
+++ b/ex33/estilo/estilo.css
@@ -65,28 +65,36 @@ a:hover{
 section.image{
     background-color: rgb(51,51,51 );
     color:white;
+    box-shadow:  inset 6px 6px 13px 0px rgba(5, 5, 5, 0.493);
    
 
 }
 section.image>p{
     display: inline-block;
     padding: 5vw;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+
 }
 section#img01{
     background-attachment: fixed;
     background-image: url(/ex33/imagem/background001.jpg);
-    background-position: right,bottom;
+    background-position: right,center;
+    background-size: cover;
 
 }
 section#img02{
     background-attachment: fixed;
     background-image: url(/ex33/imagem/background002.jpg);
-    background-position: right,bottom;  
+    background-position: right,center;
+    background-size: cover;  
 }
 section.normal{
     background-color: white;
     color:black;
+}
+section>p{
+    padding-bottom: 2em;
 }
 
 
