--- a/ex36/Css/style.css
+++ b/ex36/Css/style.css
@@ -27,4 +27,9 @@ iframe{
     top: 80px;
     height: 471px;
     width:267px;
+    background: url('/ex36/imagem/tela-home.jpg');
+    background-size: cover;
+}
+a, img{
+    height: 50px;
 }
