--- a/ex36/Css/style.css
+++ b/ex36/Css/style.css
@@ -1,46 +1,58 @@
 @charset "UTF-8";
+    
 *{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0px;
-    padding: 0px;
+    margin:0px;
+    padding:0px;
+
+}
+html,body{
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+
 }
 body{
-    background-attachment: fixed;
-    background-image: url('/ex36/imagem/fundo-madeira.jpg');
+    background: url(../imagem/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
+    background-attachment: fixed;
 }
-#telefone{
+main{
+    height: 100vh;
+    position: relative;
+    
+}
+section#telefone{
     position: absolute;
     top:50%;
     left:50%;
-    background-repeat: no-repeat;
+    transform:translate(-50%, -50%);
     height: 627px;
     width:311px;
-    transform: translate(-50%, -50%);
-    background-image: url('/ex36/imagem/frame-iphone.png');
-    background-size:cover;
+    background: url(../imagem/frame-iphone.png) no-repeat;
+
 }
-#redes{
+iframe#tela{
+    position:relative;
+    top: 80px;
+    left:22px;
+    width:267px;
+    height:471px;
+}
+section#redes-sociais{
     text-align: right;
 }
-iframe{
-    position: relative;
-    background-color: brown;
-    left: 22px;
-    top: 80px;
-    height: 471px;
-    width:267px;
-    background: url('/ex36/imagem/tela-home.jpg');
-    background-size: cover;
-    
-}
-#redes a img{
+
+section#redes-sociais img{
     width:50px;
-    margin: 10px;
-    border-radius: 50px;
-    box-shadow: 2px 2px 5px rgb(0 0 0 / 40%);
-    box-sizing: border-box;
+    margin:10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.418);
+
+
 }
-
-
-    
+section#redes-sociais img:hover{
+    border: 2px solid rgba(223, 223, 223, 0.582);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.342);
+    transition: 0.2s;
+}
