--- a/ex37/style.css
+++ b/ex37/style.css
@@ -3,3 +3,30 @@
    
     font-family: Arial, Helvetica, sans-serif;
 }
+#su{
+    text-indent: 45px;
+}
+#enviar{
+    width:100px;
+    height:25px;
+    background-color: black;
+    color:white;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.384);
+}
+#enviar:hover{
+    position: relative;
+    top:-0.5px;
+    border: 2px solid rgba(4, 164, 238, 0.459);
+    background: linear-gradient(to bottom,rgb(0, 118, 197), blue, rgb(1, 1, 182), rgb(8, 8, 177), rgb(26, 27, 104));
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.281);
+    transition: 0.3s;
+
+}
+#enviar:active{
+    position: relative;
+    top: 2px;
+    background:rgb(49, 1, 112);
+    color:rgb(217, 255, 0);
+    box-shadow: 1.5px 1.5px 4px rgba(0, 0, 0, 0.575);
+}
