--- a/ex38/style.css
+++ b/ex38/style.css
@@ -47,6 +47,7 @@ main{
     height: 2px;
     background: #fff;
     margin:8px;
+    transition: 0.3s;
 }
 @media(max-width:999px){
     body{
@@ -62,7 +63,8 @@ main{
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-        transform: translate(100%);
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
     }
     .nav-list li{
         margin-left: 0;
@@ -70,5 +72,32 @@ main{
     }
     .mobile-menu{
         display:block;
+        
     }
+    .nav-list.active{
+        transform: translateX(0);
+    }
+    @keyframes navLinkFade{
+        from{
+            opacity:0;
+            transform:translateX(50px);
+           
+        }
+        to{
+            opacity:1;
+            transform:translateX(0);
+        }
+    }
+.mobile-menu.active .line1{
+    transform: rotate(-45deg) translate(-8px, 8px);
+
+   }
+.mobile-menu.active .line2{
+    opacity:0;
+    
+}
+.mobile-menu.active .line3{
+    transform: rotate(45deg) translate(-5px, -7px);
+    
+}
 }
