--- a/ex38/style.css
+++ b/ex38/style.css
@@ -59,7 +59,7 @@ main{
         right:0;
         width:50vw;
         height:92vh;
-        background:#23232e;
+        background:#23232e9d;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
