--- a/ex39/style.css
+++ b/ex39/style.css
@@ -3,7 +3,7 @@
     padding:0;
     margin:0;
     outline: 0;
-    box-sizing: border-box;
+   
    
 }
 html,body{
@@ -18,7 +18,7 @@ a{
 
 }
 a:hover{
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.212);
 }
 #logo{
     font-size: 1.5;
@@ -31,6 +31,7 @@ header{
     align-items: center;
     justify-content: space-between;
     background: linear-gradient(90deg,#48ecb3, rgb(177, 177, 238), rgb(66, 59, 59));
+   
 }
 #menu{
     display: flex;
@@ -49,8 +50,47 @@ header{
         display:block;
     }
     #menu{
-        display:none;
+        display: block;
+        position: absolute;
+        width:100%;
+        top:70px;
+        right:0px;
+        background: linear-gradient(90deg,#48ecb3, rgb(177, 177, 238), rgb(66, 59, 59));
+        height:0;
+        transition: .6s;
+        visibility: hidden;
+        z-index:1000;
+        overflow-y: hidden;
+        
     }
+    #nav.active #menu{
+        height:calc(100vh - 70px);
+        visibility: visible;
+        overflow-y: auto;
+    }
+    #menu a {
+        padding: 1rem 0;
+        margin: 0 1rem;
+        border-bottom: 2px solid rgba(0,0,0,.05);
+    }
+    #btn-mobile{
+        display: flex;
+        padding: .5rem 1rem;
+        font-size: 1rem;
+        border:none;
+        background: none;
+        cursor:pointer;
+    
+    }
+   span#hamburguer{
+       border-top:  50px solid blueviolet;
+       width: 20px;
+    }
+    
+        
+    
+  
+
 }
     
 
