--- a/ex38/style.css
+++ b/ex38/style.css
@@ -2,6 +2,8 @@
 *{
     margin:0;
     padding:0;
+    box-sizing: border-box;
+    outline: 0;
 }
 a{
     color:#fff;
@@ -62,6 +64,7 @@ main{
         background:#23232e9d;
         flex-direction: column;
         align-items: center;
+        flex-direction: column;
         justify-content: space-around;
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
