--- a/ex42/style.css
+++ b/ex42/style.css
@@ -17,7 +17,8 @@ body{
     grid-template-columns: repeat( 4, 100px);
     grid-template-rows: minmax(120px auto) repeat(5,100px);
 }
-.calculator-grid > button{
+.calculator-grid > button{  
+    height: 60px;
     cursor:pointer;
     font-size: 2rem ;
     border: 2px solid white;
@@ -31,4 +32,23 @@ body{
 }
 .span-two{
     grid-column:  span 2;
+}
+.output{
+    grid-column: 1 / -1;
+    background-color: rgba(0,0,0,.75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 18px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+.output .previous-operand{
+    color: rgba(255,255,255,.75);
+    font-size: 1.5rem;
+}
+.output .current-operand{
+    color: rgba(255,255,255,.75);
+    font-size: 2.5rem;
 }
