--- a/ex42/style.css
+++ b/ex42/style.css
@@ -6,7 +6,7 @@
 body{
     padding: 0;
     margin: 0;
-    background:linear-gradient(to right, #00AAFF,#00FF6C)
+    background:linear-gradient(to right, #0084ca,#00d60b)
 }
 
 .calculator-grid{
@@ -23,7 +23,7 @@ body{
     font-size: 2rem ;
     border: 1px solid white;
     outline:none;
-    background-color: rgba(255,255,255,.75);
+    background-color: rgba(255, 255, 255, 0.467);
 }
 .calculator-grid > button:hover{
     background-color: rgba(255,255,255,.9);
@@ -45,10 +45,13 @@ body{
     word-break: break-all;
 }
 .output .previous-operand{
-    color: rgba(255,255,255,.75);
+    color: rgba(255, 255, 255, 0.75);
     font-size: 1.5rem;
 }
 .output .current-operand{
     color: white;
     font-size: 2.5rem;
+}
+button{
+    color: rgb(225, 0, 0);
 }
