--- a/ex43/style.css
+++ b/ex43/style.css
@@ -78,5 +78,18 @@ header ul li a{
     font-weight: 700;
 }
 #content #textBox p{
-    font-size: #333;
+    font-size:1.2em;
+    color:#333;
+}
+#content #textBox a{
+    display: inline-block;
+    margin-top:  28px;
+    padding : 15px 30px;
+    background: #ff5e8e;
+    color:#fff;
+    font-size: 1.2em;
+    border-radius:  40px;
+    font-weight:  700;
+    letter-spacing:  1px;
+    text-decoration: none;
 }
