--- a/ex43/style.css
+++ b/ex43/style.css
@@ -6,6 +6,15 @@
     outline: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+  
+  
+}
+body{
+    background-image: url('olf.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position:  center center;
+    background-attachment: fixed;
 }
 section{
     position: relative;
@@ -34,7 +43,25 @@ header .logo{
     font-size:  2em;
     text-decoration: none;
     font-weight: 800;
+    animation: slide-left 0.5s linear forwards;
+    animation-delay:calc(0.2s * var(--i));
 }
+@keyframes slide-left{
+    0%
+   {
+    transform: translateX(-100px);
+    oppacity: 0;
+
+   }
+
+100%
+{
+ transform: translateX(0px);
+ oppacity: 1;
+
+ }
+}
+
 header ul{
     position: relative;
     display: flex;
@@ -44,7 +71,7 @@ header ul li{
 }
 header ul li a{
     display:  inline-block;
-    color:#0169b2;
+    color: #0169b2;
     font-weight: 600;
     font-size: 1.1em;
     margin-left:  10px;
@@ -52,9 +79,27 @@ header ul li a{
     padding: 8px 18px;
     text-decoration: none;
     user-select: none;
+    animation: slide-top 0.5s linear forwards;
+    animation-delay: 0.2s;
+
+}
+@keyframes slide-top{
+    0%
+   {
+    transform: translateY(100px);
+    oppacity: 0;
+
+   }
+
+100%
+{
+ transform: translateX(0px);
+ oppacity: 1;
+
+ }
 }
     
- header ul li a#active,
+ header ul li a.active,
  header ul li a:hover { 
     background-color: #0169b2;
     color: #fff;
@@ -71,7 +116,7 @@ header ul li a{
 
 }
 #content #textBox h2{
-    color:#0169b2;
+    color:#15a5ff;
     font-size: 3.5em;
     margin-bottom: 10px;
     line-height: 1.2em;
@@ -79,17 +124,120 @@ header ul li a{
 }
 #content #textBox p{
     font-size:1.2em;
-    color:#333;
+    color:rgb(254, 254, 254);
 }
 #content #textBox a{
     display: inline-block;
     margin-top:  28px;
     padding : 15px 30px;
-    background: #ff5e8e;
+    background: #2153f7;
     color:#fff;
     font-size: 1.2em;
     border-radius:  40px;
     font-weight:  700;
     letter-spacing:  1px;
     text-decoration: none;
+}
+#sci{
+    position: absolute;
+    bottom: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#sci li{
+    list-style: none;
+}
+#sci li a{
+    position: relative;
+    display: inline-block;
+    margin-right: 15px;
+    width: 50px;
+    height: 50px;
+    background:#3e63ca;
+    border-radius:50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition:  0.2s ease-in-out;
+
+}
+#sci li a img{
+    filter: invert(1);
+    transform: scale(0.5);
+
+}
+#sci li a:hover{
+    background: rgba(29, 1, 133, 0.787);
+    top:-10px;
+    transform: translate(-1px);
+    
+}
+@media(max-width:999px){
+    section{
+        padding:150px 20px;
+        padding:20px;
+    }
+    #sci{
+
+       display: flex;
+       margin-bottom: -25px;
+    
+      
+    }
+    .navegation{
+        display: none;
+    }
+    .navegation.active{
+        position: fixed;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        background-color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    header ul li{
+        margin: 10px,0px;
+    }
+    header ul li a{
+        margin-left:0;
+    }
+    .toggle{
+        position: fixed;
+        top:20px;
+        right:20px;
+        width: 40px;
+        height:40px;
+        background: #152bf200 url(menu-.jpg);
+        background-size: 45px;
+        background-repeat: no-repeat;
+        background-position: center;
+        cursor: pointer;
+        z-index: 1000;
+        border-radius:  2px; 
+    }
+    .toggle.active{
+        background: #152bf200 url(x.png);
+        background-size: 25px;
+        background-repeat: no-repeat;
+        background-position: center;
+
+
+    }
+    #content #textBox h2{
+        font-size: 2.5em;
+
+    }
+    #content #textBox p{
+        font-size: 1em;
+        text-align: center;
+    }
+   
+
+   
+    
 }
