--- a/ex43/style.css
+++ b/ex43/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 *{
     margin:0;
     padding:0;
@@ -43,20 +44,21 @@ header .logo{
     font-size:  2em;
     text-decoration: none;
     font-weight: 800;
-    animation: slide-left 0.5s linear forwards;
-    animation-delay:calc(0.2s * var(--i));
+    opacity: 0;
+    animation: slide_left 0.5s linear forwards;
+    animation-delay:0.2s
 }
-@keyframes slide-left{
-    0%
+@keyframes slide_left
+{
+   100%
    {
-    transform: translateX(-100px);
-    oppacity: 0;
+    transform: translateX(0px);
+    opacity:100;
 
    }
-
-100%
+   0%
 {
- transform: translateX(0px);
+ transform: translateX(-100px);
  oppacity: 1;
 
  }
@@ -79,25 +81,26 @@ header ul li a{
     padding: 8px 18px;
     text-decoration: none;
     user-select: none;
-    animation: slide-top 0.5s linear forwards;
-    animation-delay: 0.2s;
+    opacity: 0;
+    animation: slide_top 0.5s linear forwards;
+    animation-delay:calc(0.2s * var(--i));
 
 }
-@keyframes slide-top{
-    0%
-   {
-    transform: translateY(100px);
-    oppacity: 0;
-
-   }
-
-100%
+@keyframes slide_top
 {
- transform: translateX(0px);
- oppacity: 1;
-
- }
-}
+     100%
+       {
+         transform: translateY(0px);
+         opacity:100;
+        }
+        0%
+    {
+     transform: translateY(100px);
+     oppacity: 1;
+    
+     }
+    }
+    
     
  header ul li a.active,
  header ul li a:hover { 
@@ -121,10 +124,32 @@ header ul li a{
     margin-bottom: 10px;
     line-height: 1.2em;
     font-weight: 700;
+    opacity: 0;
+    animation: slide_right 0.5s linear forwards;
+    animation-delay:1.5s
 }
+@keyframes slide_right
+{
+   100%
+   {
+    transform: translateX(0px);
+    opacity:100;
+
+   }
+   0%
+{
+ transform: translateX(100px);
+ oppacity: 1;
+
+ }
+}
+
 #content #textBox p{
     font-size:1.2em;
     color:rgb(254, 254, 254);
+    opacity: 0;
+    animation: slide_left 0.5s linear forwards;
+    animation-delay:1.75s
 }
 #content #textBox a{
     display: inline-block;
@@ -137,6 +162,9 @@ header ul li a{
     font-weight:  700;
     letter-spacing:  1px;
     text-decoration: none;
+    opacity: 0;
+    animation: slide_top 0.5s linear forwards;
+    animation-delay:2s
 }
 #sci{
     position: absolute;
@@ -160,6 +188,9 @@ header ul li a{
     justify-content: center;
     align-items: center;
     transition:  0.2s ease-in-out;
+    opacity: 0;
+    animation: slide_right 0.5s linear forwards;
+    animation-delay:calc(0.2s * var(--i))
 
 }
 #sci li a img{
