--- a/ex43/style.css
+++ b/ex43/style.css
@@ -155,16 +155,25 @@ header ul li a{
     display: inline-block;
     margin-top:  28px;
     padding : 15px 30px;
-    background: #2153f7;
+    background-image:linear-gradient(-45deg,#2153f7,#081a56) ;
+    transition: all ease 1s;
+    background-size:  400% 400%;
     color:#fff;
+    background-position:  0 0;
     font-size: 1.2em;
-    border-radius:  40px;
+    border-radius:  40px 0 40px 0;
     font-weight:  700;
     letter-spacing:  1px;
     text-decoration: none;
     opacity: 0;
     animation: slide_top 0.5s linear forwards;
     animation-delay:2s
+}
+#content #textBox a:hover{
+    border-radius: 0 40px 0 40px;
+    background-image: linear-gradient(-45deg, #2153f7, rgb(150, 118, 255), rgb(56, 6, 121));
+    background-position: 100% 50%;
+  
 }
 #sci{
     position: absolute;
