--- a/ex41/style.css
+++ b/ex41/style.css
@@ -7,3 +7,24 @@
 html, body{
     font-family: Arial, Helvetica, sans-serif;
 }
+h2{
+    padding: 30px;
+}
+h1{
+    padding: 20px;
+}
+#b{
+    padding: 5px;
+    border-radius: 15px;
+    background:  
+    linear-gradient(45deg, rgb(255, 85, 85), rgb(255, 77, 0),  rgb(221, 0, 0));
+    box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.349);
+   
+}
+#b:hover{
+    position: relative;
+    background:linear-gradient(45deg, rgb(255, 213, 213), rgb(255, 199, 167),  rgb(255, 118, 118));
+    left: 15px;
+    transition:  5s ease-in;
+
+}
