--- a/ex44/style.css
+++ b/ex44/style.css
@@ -1,16 +1,19 @@
 @charset "UTF-8";
 
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap');
 
 :root{
-    --bg-main: #ffffff;
-    --text-1: #4A154B;
-    --bg-w-1: #333333;
-    --corbg-w-2: #f5f5f5;
-    --cor5: #cccccc;
-    --cor6: #111111;
-    --cor7: #ffb900;
-    --cor8: #000000;
+    
+    --bg-main: #4A154B;
+   --bg-text-1: #333333;
+    --bg-w-1: #ffffff;
+    --bg-w-2: #f5f5f5;
+    --bg-w-3: #cccccc;
+    --bg-d-4: #111111;
+    --bg-d-5: #ffb900;
+    --bg-d-6: #000000;
+    --icon: "☀️";
+    --font: 'Poppins', cursive;
 }
 
 *{
@@ -24,4 +27,99 @@ html,body{
     height: 100%;
     scroll-behavior: smooth;
 }
+body{
+    color: var(--bg-text-1);
+    font-family:var(--font);
+    background-color: var(--bg-w-1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+h1{
+    color: var(--bg-main);
+    text-align: center;
+    border-bottom:  1px solid var(--bg-w-3);
+}
+h2{
+    color: var(--bg-main);
+    margin: 10px 0 
+}
+p{
+    margin: 20px 0;
+    text-align: center;
+}
+hr{
+    border: var(--bg-w-3);
+}
+ul{
+    list-style: none;
+}
+li{
+    margin-bottom: 15px;
+}
+button{
+    width: 100%;
+    padding: 3px;
+    border: none;
+    color: var(--bg-w-1);
+    background-color: var(--bg-main);
+    font-family: var(--font);
+    border-radius: 10px;
+    font-size:  16px;
+    text-transform: uppercase;
+    box-shadow:  3px 2px 3px black;
+}
+button:hover{
+    background: linear-gradient( 45deg, yellow, rgb(241, 112, 0),rgb(164, 3, 3) );
+    color:black;
+    box-shadow:  3px 2px 3px rgba(227, 190, 3, 0.597);
+   
+}
+a{
+    color:var(--bg-main);
+    text-decoration: none;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+    left:0;
+    width:100%;
+    padding: 5px;
+    background-color: var(--bg-w-2);
+    border-top:  1px solid var(--bg-w-3);
+    text-align: center;
+}
+.container{
+    background-color: var(--bg-w-2);
+    border: 1px solid var(--bg-w-3);
+    max-width: 450px;
+    min-height: 300px;
+    padding: 50px;
+    border-radius: 10px;
 
+}
+.dark{
+    
+   --bg-main: #ffb900;
+   --bg-text-1: #ffffff;
+   --bg-w-1: #333333;
+   --bg-w-2: #111111;
+   --bg-w-3: #000000;
+   --icon: "🌚";
+   
+
+   
+    
+   
+   
+}
+#imgDark::before{
+    content: var(--icon);
+}
+#imgDark{
+    margin:0 auto;
+    font-size:  5rem;
+    text-align: center;
+    cursor: pointer;
+}
