--- a/ex45/style.css
+++ b/ex45/style.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #181c1f;
+    background: #2c353b;
   
 }
 .container{
