--- a/ex47/css/estilo.css
+++ b/ex47/css/estilo.css
@@ -36,7 +36,7 @@ main{
     font-size: clamp(8px,5vw,25px);
     position: absolute;
     font-weight: 600;
-    color:#aaaa;
+    color:rgb(8, 7, 7);
     top: 53.5%;
     right: 27%;
 }
