--- a/ex49/css/style.css
+++ b/ex49/css/style.css
@@ -1,7 +1,127 @@
 @charset "UTF-8";
 
+
+:root{
+    --color-primary: #f24822;
+    --color-primary-variant: #ffc7bb;
+    --color-black:#0a0a0c;
+    --color-dark:#62656a;
+    --color-white:#fff;
+    --color-light: rgba(255,255,255,0.8);
+
+    --width: 84%;
+    --mobile-width: 92%;
+}
 *{
     margin: 0;
     padding: 0;
+    border:0;
+    outline: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
+html{
+    scroll-behavior: smooth;
+}
+body{
+    font-family:'Poppins', sans-serif;
+    color: var(--color-dark);
+    background: var(--color-white);
+}
+.container{
+    width:var(--width);
+    margin: 0 auto;
+
+}
+img{
+    width: 100%;
+}
+a{
+    color:var(--color-black);
+    transition: all 300ms ease;
+}
+h1,h2,h3,h4,h5{
+    color:var(--color-black);
+    font-family:'Abhaya Libre', serif; 
+    font-weight: 800;
+}
+h1{
+    font-size: 6rem;
+    letter-spacing: -0.4rem;
+    line-height: 0.8;
+}
+h2{
+    font-size: 3.2rem;
+    letter-spacing: -0.2rem;
+}h3{
+    font-size: 2rem;
+}
+h4,h5{
+    font-size: 1.4rem;
+    font: "poppins", sans-serif;
+}
+h5{
+    font-size:  0.9rem;
+}
+p{
+    line-height:  1.6;
+}
+.btn{
+    padding: 1rem 2rem;
+    border-radius:  3rem;
+    border: 1px solid transparent;
+    cursor: pointer;
+    transition:  all 300ms ease;
+}
+.btn:hover{
+    background: var(--color-white);
+    color: var(--color-black
+    );
+    border: 1px solid var(--color-black);
+}
+.btn-primary{
+    background:  var(--color-primary);
+    color: var(--color-white);
+}
+section{
+    max-width: 100vw;
+    padding: 12rem 0 0;
+}
+nav{
+    width: 100vw;
+    height: 5rem;
+    display: grid;
+    place-items:center;
+    position: fixed;
+    z-index: 2;
+}
+nav button{
+    display: none;    
+}
+nav .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav  .container ul{
+    display: flex;
+    gap: 3rem;
+}
+nav .container ul a{
+    padding:  0 0 0.3rem;
+    transition:  all 300ms ease;
+}
+nav .container ul a.active{
+    border-bottom:  6px solid var(--color-primary-variant);
+}
+nav a:hover{
+    color: var(--color-primary-variant);
+    
+
+}
+nav .icons{
+    display: flex;
+    gap: 2rem;
+    font-size: 1.2rem;
 }
