--- a/ex49/css/style.css
+++ b/ex49/css/style.css
@@ -66,6 +66,7 @@ h5{
 }
 p{
     line-height:  1.6;
+    padding-bottom: 15px;
 }
 .btn{
     padding: 1rem 2rem;
@@ -83,6 +84,8 @@ p{
 .btn-primary{
     background:  var(--color-primary);
     color: var(--color-white);
+    
+
 }
 section{
     max-width: 100vw;
@@ -124,4 +127,75 @@ nav .icons{
     display: flex;
     gap: 2rem;
     font-size: 1.2rem;
+}
+header{
+    background: url(../imagem/backve.png) no-repeat center center/cover;
+    height: 100vh;
+    max-width: 100vw;
+    position:relative;
+    top: 5rem;
+    display:grid;
+    place-items:center;
+    
+}
+header .container{
+    display: grid;
+    grid-template-columns:  30rem auto 17rem;
+    align-items: center;
+    max-height:  100%;
+    margin-top:  -10rem;
+    margin-left: 1rem;
+}
+header .container .info .delivery{
+    background:  var(--color-primary-variant);
+    padding:  .5rem  2rem;
+    border-radius:  2rem; 
+    color: var(--color-black);
+    margin-bottom: 1.5rem;
+    margin:5rem;
+    
+    
+}
+header .container .info .delivery i{
+    position: relative;
+    display:inline-block;
+    top: 8px;
+    margin-left:  1rem;
+
+}
+header .container .info p{
+    font-size: 1.3rem;
+    font-weight:  500;
+    margin: 1rem 0 2rem;
+}
+header .container .info .cta{
+    display: flex;
+    align-items: center;
+}
+
+header .container .info .cta img{
+    width: 3.6rem;
+    transition:  all 300ms ease;
+}
+
+header .container .info .cta a:last-child{
+    display: flex;
+    align-items:  center;
+    gap: 1rem;
+    margin-left:  1rem;
+    font-weight: 500;
+}
+
+
+header .container .info .cta a:last-child:hover{
+    color: var(--color-dark);
+   
+}
+header .container .info .cta a:last-child:hover img{
+    filter: saturate(0);
+}
+section#commercial{
+    background: var(--color-primary-variant) ;
+    width: 100vw;
+    height: 100vh;
 }
