--- a/ex49/css/style.css
+++ b/ex49/css/style.css
@@ -194,8 +194,27 @@ header .container .info .cta a:last-child:hover{
 header .container .info .cta a:last-child:hover img{
     filter: saturate(0);
 }
-section#commercial{
+section#commercial {
     background: var(--color-primary-variant) ;
     width: 100vw;
     height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    padding: 0;
+    display: grid;
+    place-items: center;
+    display: none;
+    
+   
 }
+section#commercial  .container {
+    width: 74%;
+    box-shadow: 0 2rem 3rem rgba(0,0,0.5);
+    
+}
+section#commercial .container  iframe{
+    width:  100%;    
+}
+
