--- a/ex49/css/style.css
+++ b/ex49/css/style.css
@@ -291,8 +291,28 @@ section#why-choose-us .container article a{
     margin-top: 1rem;
 }
 section#why-choose-us .container article a img{
+    width:8rem;
+}
+section#why-choose-us .container article a:hover img{
     filter:  saturate(0);
     transform: all 300ms ease;
+}
+section#trusted-clients h4{
+    text-align: center;
+    font-size:  1rem;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+section#trusted-clients .clients{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 4rem;
+
+    
+}
+section#trusted-clients .clients img{
+    padding-left:4rem;
 }
 
 
