--- a/ex49/css/style.css
+++ b/ex49/css/style.css
@@ -314,6 +314,17 @@ section#trusted-clients .clients{
 section#trusted-clients .clients img{
     padding-left:4rem;
 }
+.swiper{
+    width: var(--width);
+    height: 100%;
+}
+
+.swiper-wrapper{
+    width: var(--width);
+    margin-bottom: 3rem;
+    
+}
+
 
 
 
