--- a/ex51/style.css
+++ b/ex51/style.css
@@ -5,3 +5,76 @@
     padding:0;
     box-sizing: border-box;
 }
+h4{
+    font-size: 1.3rem;
+    color:rgb(2, 182, 232);
+    font-family: Arial, Helvetica, sans-serif;
+}
+.nav-center{
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around
+    
+    
+}
+a{
+    text-decoration: none;
+    padding-left: 5vw;
+    font-size: 1.3rem;
+   
+    
+}
+nav ul   {
+    list-style: none;
+   
+}
+ ul {
+    display: flex;
+    padding-right: 10vw;
+    justify-content: space-between;
+
+}
+
+
+.container{
+    color:white;
+    background: black;
+    height:40px;
+    width: 23vw;
+    position: relative;
+    top:50vh;
+    left: 40vw;
+    border-radius: 10px;
+    padding-top: 5px;
+    text-align: center;
+
+    
+
+}
+.btn{
+    position: relative;
+    top: 5vh;
+    height:5vh;
+    width: 10vw;
+    border-radius: 10px;
+   background: rgba(255, 255, 255, 0);
+   font-size: 1rem;
+   font-weight: 600;
+}
+@media(max-width:991px){
+    .nav-center{
+        width: 100%;
+        height: 100%;
+       
+      
+    }
+    .container{
+        width:50vw; 
+        height: 10vh;
+    }
+    .btn{
+        width:20vw; 
+        height: 5vh;
+}
+}
