--- a/ex54/style.css
+++ b/ex54/style.css
@@ -1,7 +1,44 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap');
 
 *{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+
+   
 }
+:root{
+    --color1:#f0f1f3;
+    --color2:#183153;
+    --robot:'Roboto Mono', monospace;
+}
+ html,body{
+    height: 100%;
+    width:100%;
+    
+}
+
+.review{
+    width:400px;
+    height:300px;
+    border: 1px solid black;
+    position: relative;
+    margin:auto;
+    top:60%;
+    box-shadow:  2px 2px 3px rgba(0, 0, 0, 0.323);
+}
+ .review .img-container{
+   
+    display: flex;
+   
+    align-items: center;
+    justify-content: center;
+ }
+  .img-container img{
+    width: 70%;
+    height: 40%;
+    position: relative;
+    top:40px;
+    
+    
+ }
