--- a/ex52/estilos/tela.css
+++ b/ex52/estilos/tela.css
@@ -35,6 +35,7 @@ ul li:hover{
     background: linear-gradient(45deg, rgba(139, 0, 0, 0.132),red,rgba(0, 0, 255, 0.188));
     position: relative;
     top:-5px;
+    cursor:pointer
    
 }
 article{
