--- a/ex55/style.css
+++ b/ex55/style.css
@@ -3,4 +3,130 @@
 *{
     margin:0;
     padding:0;
+    list-style: none;
+    text-decoration: none;
 }
+body{
+    background: #f0f1f3;
+
+}
+nav {
+    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.258);
+    height: 80px;
+    background: white;
+
+
+}
+nav  img{
+    width: 180px;
+    position: absolute;
+    top:-3.2rem;
+    left: 4%;
+    
+
+    
+  
+}
+nav ul{
+    float: right;
+    margin-right: 25px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height:  80px;
+    margin: 0 15px;
+}
+nav ul li a{
+    top: -10px;
+    position: relative;
+    color:black;
+    font-size:  18px;
+    padding:  5px 0;
+    text-transform: uppercase;
+}
+nav ul li a::before{
+    position: absolute;
+    content: '';
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width:100%;
+    background: black;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform .4s linear;
+
+}
+nav ul li a:hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
+
+}
+.hamburger{
+    position: absolute;
+    display: none;
+    cursor: pointer;
+    left: 90%;
+    
+}
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transform: all 0.3s ease-in-out;
+    transition:  all 0.3s ease-in-out;
+    background: black;
+ 
+}
+@media(max-width: 768px){
+    .hamburger{
+        display: block;
+    }
+    .hamburger:active .bar:nth-child(2){
+        opacity: 0;
+        
+    }
+    .hamburger:active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger:active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    
+    .links{
+        position: fixed;
+        top: -100%;
+        gap: 0;
+        flex-direction: column;
+        background-color:white;
+        width:100%;
+        text-align: center;
+        transition:  .3s;
+       
+    }
+    nav ul{
+        height: 98vh;
+        width: 300px;
+        display: flex;
+        position: relative;
+        margin: auto;
+        justify-content: center;
+       
+    }
+    .nav-item{
+       margin: 16px 0;
+       margin-right: 15px;
+
+       
+
+    }
+    .links.active{
+        top: 0;
+        
+    }
+    
+}
+
