--- a/ex55/style.css
+++ b/ex55/style.css
@@ -1,193 +1,96 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap');
 
-*{
-    margin:0;
-    padding:0;
-    list-style: none;
+:root {
+    /* dark shades of primary color*/
+    --clr-primary-1: hsl(205, 86%, 17%);
+    --clr-primary-2: hsl(205, 77%, 27%);
+    --clr-primary-3: hsl(205, 72%, 37%);
+    --clr-primary-4: hsl(205, 63%, 48%);
+    /* primary/main color */
+    --clr-primary-5: hsl(205, 78%, 60%);
+    /* lighter shades of primary color */
+    --clr-primary-6: hsl(205, 89%, 70%);
+    --clr-primary-7: hsl(205, 90%, 76%);
+    --clr-primary-8: hsl(205, 86%, 81%);
+    --clr-primary-9: hsl(205, 90%, 88%);
+    --clr-primary-10: hsl(205, 100%, 96%);
+    /* darkest grey - used for headings */
+    --clr-grey-1: hsl(209, 61%, 16%);
+    --clr-grey-2: hsl(211, 39%, 23%);
+    --clr-grey-3: hsl(209, 34%, 30%);
+    --clr-grey-4: hsl(209, 28%, 39%);
+    /* grey used for paragraphs */
+    --clr-grey-5: hsl(210, 22%, 49%);
+    --clr-grey-6: hsl(209, 23%, 60%);
+    --clr-grey-7: hsl(211, 27%, 70%);
+    --clr-grey-8: hsl(210, 31%, 80%);
+    --clr-grey-9: hsl(212, 33%, 89%);
+    --clr-grey-10: hsl(210, 36%, 96%);
+    --clr-white: #fff;
+    --clr-red-dark: hsl(360, 67%, 44%);
+    --clr-red-light: hsl(360, 71%, 66%);
+    --clr-green-dark: hsl(125, 67%, 44%);
+    --clr-green-light: hsl(125, 71%, 66%);
+    --clr-black: #222;
+    --ff-primary: 'Roboto', sans-serif;
+    --ff-secondary: 'Open Sans', sans-serif;
+    --transition: all 0.3s linear;
+    --spacing: 0.1rem;
+    --radius: 0.25rem;
+    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    --max-width: 1170px;
+    --fixed-width: 620px;
+  }
+  *,
+  ::after,
+  ::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    font-family: var(--ff-secondary);
+    background: var(--clr-grey-10);
+    color: var(--clr-grey-1);
+    line-height: 1.5;
+    font-size: 0.875rem;
+  }
+  ul {
+    list-style-type: none;
+  }
+  a {
     text-decoration: none;
-}
-body{
-    background: #f0f1f3;
-
-}
-nav {
-    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.258);
-    height: 80px;
-    background: white;
-
-
-}
-nav  img{
-    width: 180px;
-    position: absolute;
-    top:-3.2rem;
-    left: 4%;
-    
-
-    
+  }
   
-}
-nav ul{
-    text-align: center;
-    margin-right: 25px;
-}
-
-nav ul li{
-    display: inline-block;
-    line-height:  80px;
-    margin: 0 15px;
-}
-nav ul li a{
-    top: -10px;
-    position: relative;
-    color:black;
-    font-size:  18px;
-    padding:  5px 0;
-    text-transform: uppercase;
-}
-nav ul li a::before{
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: 0;
-    height: 3px;
-    width:100%;
-    background: black;
-    transform: scaleX(0);
-    transform-origin: right;
-    transition: transform .4s linear;
-
-}
-nav ul li a:hover::before{
-    transform: scaleX(1);
-    transform-origin: left;
-
-}
-.hamburger{
-    position: absolute;
-    display: none;
-    cursor: pointer;
-    left: 90%;
-    
-}
-
-.bar{
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    
-    transition:  all 0.3s ease-in-out;
-    background: black;
- 
-}
-.social-icons{
+ .sidebar-header{
+    position:relative;
     display: flex;
-    position: relative;
-    float:right;
-    top:-15px;
-    transform: none;
+    border: 1px solid black;
+    height: 25vh;
+    top: -21px;
+
+   
 }
-    .icon{
-    display: flex;
-    width: 30px;
-    height: 30px;
+.sidebar-header .logo{
     position: relative;
-  
-    
-    transform-origin: none;
-   
-    justify-content: space-between;
-    align-items: center;
-    display: inline-block;
-    line-height:  80px;
-    margin: 0 15px;
-    background-color: aqua;
-    border-radius: 50%;
-    transition: 5s ease;
-
-    
+    height: 40vh;
+    top: -30%;
 }
-.social-icons .fab .icon:hover{
-    display: flex;
-    position: relative;
-    top:-10px;
+.links{
+    display:block;
+    
+   
+
 }
-   
-
-@media(max-width: 768px){
-    .hamburger{
-        display: block;
-    }
-    .hamburger.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg);
-    }
-    .hamburger.active .bar:nth-child(2){
-        opacity: 0;
-    }
-    .hamburger.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg);
-    }
-    
-
-
-
-    .links {
-        position: fixed;
-        top: -100%;
-        gap: 0;
-        flex-direction: column;
-        background-color:rgb(255, 255, 255);
-        width:100%;
-        text-align: center;
-        transition:  .3s;
-       
-       
-    }
-
-    nav ul{
-        height:40vh;
-        display: flex;
-        position: relative;
-        margin: auto;
-        justify-content: center;
-        cursor: pointer;
-        line-height: 2px;
-        
+.nav-item a{
+    padding:0;
+    margin:0;
+}
 
        
-       
-    }
-    
-    
-       
-    
-    nav ul li{
-        position: relative;
-    
-        line-height: 2.5rem;
-        top: 140px;
-    }
-    nav ul li a{
-        position: relative;
-        color: rgb(7, 7, 7);
-        right: 35%;
-        top: -15vh; 
-        
-    }
-   
-   
 
  
  
  
-    .links.active{
-        top: 0;
-    
-        
-    }
-    .social-icons{
-        display:none ;
-    }
-}
-
