--- a/ex55/style.css
+++ b/ex55/style.css
@@ -49,15 +49,121 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style-type: none;
   }
   body {
+    min-height: 200vh;
     font-family: var(--ff-secondary);
-    background: var(--clr-grey-10);
-    color: var(--clr-grey-1);
+    background: var(  --clr-grey-1);
+    color: var(--clr-white);
     line-height: 1.5;
     font-size: 0.875rem;
   }
+ 
+  header{
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.7s;
+    padding: 37px 100px;
+   
+  }
+  img{
+    width: 5rem;
+    height: 3rem;
+  }
+  header.sticky{
+    background: var(--clr-white);
+  }
+  header .logo{
+    position: relative;
+    font-weight: 700;
+    color: var(--clr-white);
+    letter-spacing: 1px;
+    font-size:  1.5rem;
+    text-transform: uppercase;
+    transition: 0.7s;
+    
+  }
+  header nav ul{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  header nav ul li a{
+    position: relative;
+    margin:0 15px;
+    color: var(--clr-white);
+    letter-spacing: 1px;
+    font-size: 18px;
+    font-weight: 700px;
+    transition: 0.7s;
+  }
+  header nav ul li a:hover{
+    color: #999;
+  }
+  header.sticky .logo,
+  header.sticky ul  li a{
+    color:#222;
+  }
+  .banner{
+    width: 100%;
+    height:100vh;
+  }
+  .burgue{
+    display: none;
+    cursor: pointer;
+  }
+.bar{
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+   background-color: white;
+}
+@media(max-width: 768px){
+  .burgue{
+    display: block;
+  }
+  header{
+    display: none;
+  }
+  .burgue.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+  }
+  .burgue.active .bar:nth-child(2){
+    opacity: 0;
+  }
+  .burgue.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+    
+  }
+  .nav-menu{
+    position: fixed;
+    left: -100%;
+    top:70px;
+    gap:0;
+    flex-direction: column;
+    background-color: white;
+    text-align: center;
+    transition: 0.3s;
+  }
+  .nav-menu.active{
+    display: block;
+    opacity: 1;
+  }
 
+  
+  
+}
 
 
  
