--- a/ex55/style.css
+++ b/ex55/style.css
@@ -38,7 +38,7 @@ html,body{
  
 }
 #bar1{
-  transform: translateY(-4px) ;
+  transform: translateY(-4px);
 }
 #bar3{
   transform: translateY(4px);
@@ -64,13 +64,16 @@ html,body{
   display: none;
 
 }
-.menu-bg #menu-bar{
+.menu-bg, #menu-bar{
   top: 0;
   left:0;
   position:absolute;
 }
 .menu-bg{
-  z-index:1;
+  display: flex;
+  position: relative;
+
+  z-index:-1;
   width:0;
   height: 0;
   margin: 30px 0 20px 20px;
@@ -81,26 +84,34 @@ html,body{
 #menu-bar{
   z-index: 2;
 }
-.change-bg{
-  width: 550px;
-  height: 540px;
+.change #menu-bg{
+  border:  2px solid black;
+  width: 300px;
+  height: 200px;
+  right: 12rem;
   transform: translate(-60% -30%);
+  display: block ;
 }
 .change .bar{
   background-color: white;
 }
-.change .bar1{
+.change #bar1{
   transform: translateY(4px) rotateZ(-45deg);
 }
-.change .bar3{
-  transform: translateY(-6px) rotateZ(45deg);
+.change #bar3{
+  transform: translateY(-6px) rotate(45deg);
 }
-.change .bar2{
+.change #bar2{
   opacity:0;
 }
 .change{
   display: block;
 
+}
+.change .menu{
+ display: flex;
+ position: relative;
+ left:50px;
 }
 
 
