--- a/ex55/style.css
+++ b/ex55/style.css
@@ -8,9 +8,36 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
+    text-decoration: none;
   
   }
-ul li a{
-  text-decoration: none;
+
+body{
+  width:100%;
+  height:100%;
+}
+
+.nav-center  {
+  display: flex;
+  width: 100%;
+  height:80px;
+  align-items: center;
+  justify-content: space-between;
+  background: rgb(221, 251, 247);
+}
+.links{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   
 }
+.social-icons{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
