--- a/ex55/style.css
+++ b/ex55/style.css
@@ -13,31 +13,143 @@
   
   }
 
-body{
-  width:100%;
-  height:100%;
+html,body{
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(rgb(235, 251, 251), rgb(229, 231, 232));
+
+  font-family: Open Sans;
+ 
+ 
+}body > nav{
+ 
+  background:linear-gradient(45deg,white,  lightblue);
 }
 
 .nav-center  {
+  box-shadow:  1px 1px 3px rgba(0, 0, 0, 0.213);
   display: flex;
   width: 100%;
   height:80px;
   align-items: center;
   justify-content: space-between;
-  background: rgb(221, 251, 247);
+  background: #fff;
+}
+
+.nav-toggle{
+  position: relative;
+  display: none;
+  left:92vw;
+  width:25px;
+  height: 35px;
+  transition: .4s ease-out;
+  border: 1px solid rgb(101, 196, 251);
+  color:rgb(66, 158, 186);
+  border-radius: 5px;
+  
+
+}
+
+.nav-toggle:hover{
+  transition: 1s;
+  transform: rotate(90deg);
+}
+
+
+.fab{
+  color:rgb(33, 173, 233);
 }
 .links{
-  position: relative;
+ 
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  gap: 7vw;
   
 }
-.social-icons{
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.links li a{
+  color:black;
+  cursor: pointer;
 
 }
+.links li a:hover{
+  color:darkred;
+}
 
+.logo{
+  color: black;
+  font-size: 25px;
+  position: relative;
+  left:15px;
+  text-shadow: 1px 2px 3px  rgba(0, 0, 0, 0.592);
+}
+.social-icons{
+  padding-right: 20px;
+  color:red;
+  display: flex;
+  gap:2vw;
+
+
+}
+@media(max-width:750px){
+  .links{
+    display: none;
+  }
+  .social-icons{
+    display: none;
+  }
+  .nav-toggle{
+    display: block;
+    
+
+   
+  }
+  .nav-toggle.active{
+    position: relative;
+    bottom:20vh;
+
+  }
+
+  .logo{
+    position: relative;
+    top:17px;
+  }
+
+  .links.active {
+    position: absolute;
+    display: block;
+    height: 80px;
+    font-size: 1.3rem;
+    line-height: 2.5rem;
+    left: 2vw;
+
+  
+
+  }
+  .links li a{
+    display: block;
+    position: relative;
+    top: -40px;
+    background: rgba(140, 212, 212, 0.212);
+
+    text-align: center;
+    padding: 2px 100vw 5px 0;
+    padding-left: 15px;
+    margin-bottom:  .7rem;;
+
+    border-radius: 5px;
+  }
+  .logo{
+    position: fixed;
+  }
+  .nav-center.active{
+    height:50vh;
+    transition: .5s;
+   overflow-y: hidden;
+
+
+  }
+  .nav-center{
+    transition: .5s;
+
+  }
+
+}
