--- a/ex52/mq004/estilos/Media-query.css
+++ b/ex52/mq004/estilos/Media-query.css
@@ -12,6 +12,30 @@ Grandes telas: acima de 1200px
 
   
 @media print{
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+    main h1{
+        text-align: justify;
+        text-shadow: none;
+        color:black;
+    }
+    main{
+        width:90vw;
+        border:  2px solid black;
+    }
+    main::after{
+        content:'Essa impressão foi feita através de um site';
+        text-decoration: overline;
+
+    }
+    body{
+        background: url(../imagens/back-print.jpg);/*Desnecessário*/
+       
+    }
+    img#fone{
+        display: none;
+    }
     img#tablete{
         display: none;
     }
@@ -24,15 +48,18 @@ Grandes telas: acima de 1200px
     img#tv{
         display: none;
     }
+   
     
 
 }
-@media screen and (min-width:881px)  and (max-width:1200px){
+@media screen and (min-width:768px)  and (max-width:992px){
     body{
         background: url(../imagens/back-tablet.jpg);
 
 }
-
+img#fone{
+    display: none;
+}
 img#tablete{
     display: block;
 }
